# ansi_rgb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: background.rs  basic_color.rs  blink.rs  bold.rs  canvas.rs  color.rs  colors.rs  foreground.rs  italic.rs  lib.rs  main.rs  rgb.rs  underline.rs
tests/: tests.rs
