[package]
name = "ansi_rgb"
version = "0.1.0"
authors = ["Matt Thomas <me@matthewathomas.com>"]
edition = "2018"
description = "Simple `no_std` compatible ANSI escape character coloring"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
