[package]
name = "ansi_rgb"
version = "0.3.1-alpha3"
authors = ["Matt Thomas <me@matthewathomas.com>"]
edition = "2021"
description = "Colorful terminal text using ANSI escape sequences"
license = "MIT"
categories = ["no-std", "command-line-interface"]
keywords = ["ansi", "color", "rgb", "no_std", "terminal"]
readme = "README.md"
repository = "https://github.com/rust-osdev/ansi_rgb"
homepage = "https://github.com/rust-osdev/ansi_rgb"
documentation = "https://docs.rs/ansi_rgb"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = { version = "0.8", default-features = false, optional = true }

[features]
default = ["rgb"]